fix: change the font size so its visible

--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -995,7 +995,7 @@ p {
 
 .ud-single-pricing .ud-pricing-body li {
   font-weight: 500;
-  font-size: 15px;
+  font-size: 21px;
   margin-bottom: 18px;
 }
 
